# mllm-advanced

./: .clang-format  .clang-tidy  .clang-tidy.ignore  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py  task.py
benchmarks/Backend/Arm/: CMakeLists.txt  ComplexOps.cpp  ElewiseOps.cpp  GemmOps.cpp  GemvOps.cpp
benchmarks/Backend/CUDA/: CMakeLists.txt  ElewiseOps.cu
examples/Models/: CMakeLists.txt  demo_ds_qwen2.cpp  demo_ds_qwen2_fa2_fp16.cpp
examples/Models/DeepSeekDistillQwen2/: 1.5B-W16A16-KAI.json  1.5B-W32A32.json  1.5B-W4A16-KAI.json  1.5B-W4A32-KAI.json  demo_ds_qwen2.cpp  demo_ds_qwen2_fa2_fp16.cpp
examples/Models/Qwen2VL/: CMakeLists.txt  demo_qwen2vl.cpp
mllm/Backends/Arm/: ArmAllocator.cpp  ArmAllocator.hpp  ArmBackend.cpp  ArmBackend.hpp  ArmQuantizerHelper.cpp  ArmQuantizerHelper.hpp  CMakeLists.txt  README.md
mllm/Backends/Arm/Kernels/: conv3d.cpp  conv3d.hpp  element_wise.cpp  element_wise.hpp  fa2_mma0.S  fa2_mma0.hpp  gelu.cpp  gelu.hpp  hgemm.cpp  hgemm.hpp  hgemv.cpp  hgemv.hpp  kai_linear.cpp  kai_linear.hpp  layernorm.cpp  layernorm.hpp  math.hpp  mem.cpp  mem.hpp  permute.cpp  permute.hpp  rope.cpp  rope.hpp  sgemm.cpp  sgemm.hpp  sgemv.cpp  sgemv.hpp  silu.cpp  silu.hpp  softmax.cpp  softmax.hpp  transpose.cpp  transpose.hpp
mllm/Backends/Arm/Kernels/Quantize/: README.md  fp32_s8s_pto_key.cpp  fp32_s8s_pto_key.hpp
mllm/Backends/Arm/Ops/: CastTypeOp.cpp  CastTypeOp.hpp  CausalMaskOp.cpp  CausalMaskOp.hpp  CloneOp.cpp  CloneOp.hpp  ConcatOp.cpp  ConcatOp.hpp  Conv3DOp.cpp  Conv3DOp.hpp  CopyOp.cpp  CopyOp.hpp  ElewiseOps.cpp  ElewiseOps.hpp  FillOp.cpp  FillOp.hpp  FlashAttention2Op.cpp  FlashAttention2Op.hpp  GELUOp.cpp  GELUOp.hpp  KVCacheOp.cpp  KVCacheOp.hpp  LLMEmbeddingTokenOp.cpp  LLMEmbeddingTokenOp.hpp  LayerNormOp.cpp  LayerNormOp.hpp  LinearOp.cpp  LinearOp.hpp  MatMulOp.cpp  MatMulOp.hpp  MultimodalRoPEOp.cpp  MultimodalRoPEOp.hpp  PermuteOp.cpp  PermuteOp.hpp  QuickGELUOp.cpp  QuickGELUOp.hpp  RMSNormOp.cpp  RMSNormOp.hpp  RepeatOp.cpp  RepeatOp.hpp  (+14 more)
mllm/Backends/Arm/Passes/: KaiQuantizationPass.cpp  KaiQuantizationPass.hpp
mllm/Backends/CUDA/: CMakeLists.txt  CUDAAllocator.cpp  CUDAAllocator.hpp  CUDABackend.cpp  CUDABackend.hpp  CUDACommons.cpp  CUDACommons.hpp  CuProfiler.hpp  README.md
mllm/Backends/CUDA/Kernels/: elewise.cu  elewise.cuh  gpu_info.cuh  math_func.cuh  permute.cuh  reduce.cu  reduce.cuh  softmax.cu  softmax.cuh  swish.cuh  transpose.cuh
mllm/Backends/CUDA/Ops/: D2HOp.cpp  D2HOp.cu  D2HOp.cuh  ElewiseOps.cpp  ElewiseOps.cu  ElewiseOps.hpp  OpSelection.cu  OpSelection.hpp
mllm/Backends/CUDA/Passes/: RemoveNGpuGraphPass.cpp  RemoveNGpuGraphPass.hpp
mllm/Backends/OpenCL/: CMakeLists.txt  OpenCLBackend.cpp  OpenCLBackend.hpp
mllm/Backends/OpenCL/Kernels/: Core.hpp  Core.inl  ElewiseAddFp16Buffer.hpp  ElewiseAddFp16Image.hpp  KernelTemplate.inl  elewise_add_fp16_image.cl  gen_opencl_kernel_cpp_warp.py  gen_opencl_kernel_cpp_wrap.py
mllm/Backends/OpenCL/Runtime/: OpenCLKernel.hpp  OpenCLLoader.cpp  OpenCLLoader.hpp  OpenCLRuntime.cpp  OpenCLRuntime.hpp
mllm/Backends/OpenCL/Vendors/: README.md
mllm/Backends/QNN/: CMakeLists.txt  QnnAllocator.cpp  QnnAllocator.hpp  QnnBackend.cpp  QnnBackend.hpp  QnnOpHelpMacros.hpp  QnnTensorHelpMacros.hpp  README.md
mllm/Backends/QNN/Experiment/QnnMicroKernels/: README.md
mllm/Backends/QNN/Kernels/: README.md
mllm/Backends/QNN/MobiLMCache/: QnnPagedCache.cpp  QnnPagedCache.hpp
mllm/Backends/QNN/Ops/: CopyOp.cpp  CopyOp.hpp  ElewiseOp.cpp  ElewiseOp.hpp  LinearOp.cpp  LinearOp.hpp  MatMulOp.cpp  MatMulOp.hpp  QnnBaseOp.cpp  QnnBaseOp.hpp  README.md  RepeatOp.cpp  RepeatOp.hpp  SiLUOp.cpp  SiLUOp.hpp  ViewOp.cpp  ViewOp.hpp
mllm/Backends/QNN/Passes/: GraphBuildPass.cpp  GraphBuildPass.hpp  QnnAnonymousOpNamingPass.cpp  QnnAnonymousOpNamingPass.hpp  QnnGraphBuildPass.cpp  QnnGraphBuildPass.hpp  QnnGraphInlinePass.cpp  QnnGraphInlinePass.hpp  QnnHTPFriendlyFullyConnectPass.cpp  QnnHTPFriendlyFullyConnectPass.hpp  QnnLoweringPipeline.cpp  QnnLoweringPipeline.hpp  QnnMarkIOTensorPass.cpp  QnnMarkIOTensorPass.hpp  QnnTensorNamingPass.cpp  QnnTensorNamingPass.hpp
mllm/Backends/QNN/Runtime/: QnnCommon.cpp  QnnCommon.hpp  QnnCompiledObj.cpp  QnnCompiledObj.hpp  QnnIRGraph.cpp  QnnIRGraph.hpp  QnnLoader.cpp  QnnLoader.hpp  QnnLog.cpp  QnnLog.hpp  QnnTensorTransform.cpp  QnnTensorTransform.hpp
mllm/Backends/X86/: CMakeLists.txt  X86Allocator.cpp  X86Allocator.hpp  X86Backend.cpp  X86Backend.hpp
mllm/Backends/X86/Kernels/: element_wise.cpp  element_wise.hpp  mem.cpp  mem.hpp  quants.cpp  quants.hpp  vec_dot_q4_k_q8_k_avx2.cpp  vec_dot_q4_k_q8_k_avx2.hpp  vec_dot_q4_k_q8_k_avx512f.cpp  vec_dot_q4_k_q8_k_avx512f.hpp
mllm/Backends/X86/Kernels/Quantize/: README.md  (+2 more)
mllm/Backends/X86/Ops/: ElewiseOps.cpp  ElewiseOps.hpp
mllm/JIT/: CMakeLists.txt  README.md
mllm/JIT/Schema/CPU/: ElewiseOps.cpp  ElewiseOps.hpp
playground/QnnMaximumMemory/: CMakeLists.txt  main.cpp  run.py
playground/QnnPagedAttn/: CMakeLists.txt  README.md  main.cpp  mma0.mir  run.py
playground/ScheduleTimeBtCpuNpu/: CMakeLists.txt  README.md  main.cpp  run.py
tests/: CMakeLists.txt
tests/Arm/: CMakeLists.txt  FlashAtten2Test.hpp  HgemvTest.hpp  KaiLinearTest.hpp  Kernels.cpp  SgemmTest.hpp  SgemvTest.hpp  SingleConv3DTest.cpp  SoftmaxTest.hpp  TransposeTest.hpp
tests/CUDA/: CMakeLists.txt  Context.cpp  Kernels.cpp  ReductionTest.hpp  SoftmaxTest.hpp
tests/IR/: CMakeLists.txt  LlmIR.cpp
tests/Nn/: CMakeLists.txt  ComplexIndex.cpp  ModuleCreate.cpp  OpCall.cpp  WriteTo.cpp
tests/OpenCL/: CMakeLists.txt  OpenCLDetectTest.cpp
tests/Preprocessor/: CMakeLists.txt  ImageLoadAndStoreTest.cpp
tests/QNN/: CMakeLists.txt  QnnCopyOpEliminateTest.cpp  QnnDetectTest.cpp  QnnIRLoweringTest.cpp
tests/Utils/: CMakeLists.txt  MllmThreadPool.cpp
tests/X86/: CMakeLists.txt  Kernels.cpp  QuantTest.hpp
tools/Quantizer/: CMakeLists.txt  FlatModuleBuilder.cpp  FlatModuleBuilder.hpp  main.cpp
tools/TokenizeChecker/: CMakeLists.txt  main.cpp
(+312 files in other folders)
