enable_testing()
add_subdirectory(Nn)
add_subdirectory(IR)
add_subdirectory(Utils)
add_subdirectory(Preprocessor)

if(MLLM_BUILD_ARM_BACKEND)
  add_subdirectory(Arm)
  add_subdirectory(OpenCL)
else()
  add_subdirectory(X86)
endif()

if(MLLM_BUILD_CUDA_BACKEND)
  add_subdirectory(CUDA)
endif()

if(MLLM_BUILD_QNN_BACKEND)
  add_subdirectory(QNN)
endif()
